# TRAYPORT_API_CLIENT

./: .env.example  .gitignore  CLAUDE.md  Introduction_to_Data_Analytics.ipynb  PROJECT_SUMMARY.md  README.md  pyproject.toml  requirements.txt  trayport_connector_plan.md
examples/: comprehensive_api_test.py  real_usage_example.py
trayport_client/: __init__.py
trayport_client/client/: auth.py  base.py  circuit_breaker.py  rate_limiter.py  retry.py
trayport_client/config/: constants.py  settings.py
trayport_client/endpoints/: base.py  orders.py  reference.py  trades.py
trayport_client/exceptions/: __init__.py  api.py  client.py
trayport_client/models/: __init__.py  base.py  common.py  orders.py  reference.py  trades.py
trayport_client/utils/: date_slicer.py  datetime_utils.py
